--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,5 +1,5 @@
 body {
-	background: url('../img/gray_jean.png');
+/* 	background: url('../img/gray_jean.png'); */
 	padding-top: 40px;
 	color: rgb(24, 24, 24);
 }
