--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="content-rounded-panel">
 			<div id="introBlurb">
-				{{site.intro}}
+				<p align=”justify”> {{site.intro}} </p>
 			</div>
 			<br>
 		</div>
